manifests/dynatrace_operator_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    dynatrace: operator
    operator: dynakube
  name: dynatrace-operator
  namespace: dynatrace
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: dynatrace-operator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        dynatrace: operator
        name: dynatrace-operator
        operator: dynakube
    spec:
      tolerations:
      - key: ${systempool_taint_key}
        operator: "Exists"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions: 
              - key: ${affinity_exp_key}
                operator: In
                values: 
                 - ${affinity_exp_value}
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                 - amd64
                 - arm64
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
              - key: beta.kubernetes.io/os
                operator: In
                values:
                - linux
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
      containers:
      - args:
        - operator
        image: ${docker_image_dynatrace_operator}:${docker_tag_dynatrace_operator}
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: server-port
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
        name: dynatrace-operator
        ports:
        - containerPort: 8080
          name: metrics
        - containerPort: 10080
          name: server-port
        readinessProbe:
          httpGet:
            path: /healthz
            port: server-port
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
      serviceAccountName: dynatrace-operator
