manifests/gateway_config.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - ${ingressdomain}
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ${ingress-gateway-secret}
      mode: SIMPLE
